More bug fixes in nn

--- a/notebooks/Sampling.ipynb
+++ b/notebooks/Sampling.ipynb
@@ -42,9 +42,9 @@
    "source": [
     "state_dict = torch.load(MODEL_PATH)\n",
     "model = StyleGANGenerator(128, prog_growth=True).to('cuda').eval()\n",
-    "for _ in range(4):\n",
-    "    model.grow_new_block()\n",
-    "    model.fuse_new_block()\n",
+    "# for _ in range(4):\n",
+    "#     model.grow_new_block()\n",
+    "#     model.fuse_new_block()\n",
     "model.load_state_dict(state_dict['net_g_state_dict'])"
    ]
   },
