--- a/notebooks/Inversion.ipynb
+++ b/notebooks/Inversion.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/training/training_output/checkpoints/iter_365000.pt\"\n",
-    "DATA_ROOT = \"/exports/lkeb-hpc/csrao/datasets/BraTS2020_train_kaggle/\""
+    "TRAINING_OUTPUT_DIR = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/training/training_output\"\n",
+    "DATA_ROOT = \"/exports/lkeb-hpc/csrao/datasets/BraTS2020_train_kaggle\""
    ]
   },
   {
@@ -49,7 +49,8 @@
    "outputs": [],
    "source": [
     "# Load model\n",
-    "state_dict = torch.load(MODEL_PATH)\n",
+    "model_path = f\"{TRAINING_OUTPUT_DIR}/checkpoints/iter_365000.pt\"\n",
+    "state_dict = torch.load(model_path)\n",
     "model = StyleGANGenerator(128, prog_growth=False).to('cuda')\n",
     "model.load_state_dict(state_dict['net_g_state_dict'])\n",
     "\n",
