--- a/notebooks/Sampling.ipynb
+++ b/notebooks/Sampling.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/training/training_output/checkpoints/iter_365000.pt\""
+    "TRAINING_OUTPUT_DIR = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/training/training_output\""
    ]
   },
   {
@@ -58,8 +58,8 @@
    ],
    "source": [
     "# Load model for inference\n",
-    "\n",
-    "state_dict = torch.load(MODEL_PATH)\n",
+    "model_path = f\"{TRAINING_OUTPUT_DIR}/checkpoints/iter_365000.pt\"\n",
+    "state_dict = torch.load(model_path)\n",
     "model = StyleGANGenerator(128, prog_growth=False).to('cuda').eval()\n",
     "model.load_state_dict(state_dict['net_g_state_dict'])"
    ]
