--- a/notebooks/Sampling.ipynb
+++ b/notebooks/Sampling.ipynb
@@ -13,8 +13,8 @@
     "import torch\n",
     "import torchvision\n",
     "\n",
-    "sys.path.append(\"../training/\")\n",
-    "from utils.nn import StyleGANGenerator"
+    "sys.path.append(\"../stylegan/\")\n",
+    "from nn import StyleGANGenerator"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAINING_OUTPUT_DIR = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/training/training_output\""
+    "TRAINING_OUTPUT_DIR = \"/exports/lkeb-hpc/csrao/git-personal/stylegan/stylegan/training_output\""
    ]
   },
   {
